test/lit/pto/issue708_zero_valid_subview_inferred_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 --emit-pto-ir %s 2>&1 | FileCheck %s

// Guards the bounds of the inferred-empty subview relaxation: a result type may
// declare an empty valid region (0) only as the operand-omitted no-op marker.
// A non-zero valid that disagrees with the inferred/explicit valid is still
// rejected -- 0 is the only extra value allowed beyond `sizes`.

module attributes {"pto.device-spec" = "Ascend910B3"} {
  // Inferred path (no valid operand) declaring a non-zero, non-size valid (3):
  // must still fail, exactly as before this relaxation.
  func.func @neg_inferred_nonzero_mismatch() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    %c0 = arith.constant 0 : index
    %src = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=128, v_row=16, v_col=128, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %t = pto.subview %src[%c0, %c0] sizes [5, 128] :
      !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=128, v_row=16, v_col=128, blayout=row_major, slayout=none_box, fractal=512, pad=0>
      -> !pto.tile_buf<loc=vec, dtype=f32, rows=5, cols=128, v_row=3, v_col=128, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    return
  }
}

// CHECK: error: 'pto.subview' op expects result valid_shape[0] to match inferred/explicit valid_row
